[gd_scene load_steps=5 format=3 uid="uid://b6ak5hng6bh50"]

[ext_resource type="Texture2D" uid="uid://k7o7g33ecm1b" path="res://colors.jpg" id="1_uhart"]
[ext_resource type="FontFile" uid="uid://day2swlgipftm" path="res://Minecraft.ttf" id="2_2w45e"]
[ext_resource type="Script" path="res://King/Nivel1.gd" id="3_5tkeq"]
[ext_resource type="Script" path="res://King/Button2.gd" id="4_jm7p5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Colors" type="Sprite2D" parent="."]
position = Vector2(584.611, 412.498)
rotation = -1.5708
scale = Vector2(1.45921, 1.3797)
texture = ExtResource("1_uhart")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.5
offset_top = -127.0
offset_right = 266.5
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2w45e")
theme_override_font_sizes/font_size = 40
text = "Elige el nivel"
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2w45e")
theme_override_font_sizes/font_size = 35
text = "Nivel 1"
script = ExtResource("3_5tkeq")

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2w45e")
theme_override_font_sizes/font_size = 35
text = "Nivel 2"
script = ExtResource("4_jm7p5")

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2w45e")
theme_override_font_sizes/font_size = 35
text = "Nivel 3"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2w45e")
theme_override_font_sizes/font_size = 35
text = "Salir"

[connection signal="pressed" from="VBoxContainer/Button" to="VBoxContainer/Button" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="VBoxContainer/Button" method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="VBoxContainer/Button" method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="VBoxContainer/Button" method="_on_button_4_pressed"]
